added file list activity

--- a/QuestTrack/app/src/main/res/values/strings.xml
+++ b/QuestTrack/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="load_quest">Load Quest</string>
     <string name="name">Name</string>
     <string name="main_text">Main Text\'</string>
+    <string name="no_files_found">NO FILES FOUND</string>
 </resources>
