--- a/QuestTrack/app/src/main/res/values/strings.xml
+++ b/QuestTrack/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="name">Name</string>
     <string name="main_text">Main Text\'</string>
     <string name="no_files_found">NO FILES FOUND</string>
+    <string name="documents">Documents</string>
 </resources>
