--- a/QuestTrack/app/src/main/res/values/strings.xml
+++ b/QuestTrack/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="main_text">Main Text\'</string>
     <string name="no_files_found">NO FILES FOUND</string>
     <string name="documents">Documents</string>
+    <string name="save">save</string>
 </resources>
