--- a/QuestTrack/app/src/main/res/values/strings.xml
+++ b/QuestTrack/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="no_files_found">NO FILES FOUND</string>
     <string name="documents">Documents</string>
     <string name="save">save</string>
+    <string name="abc">ABC</string>
 </resources>
